SSL as config file option

--- a/Vault2GitCLI/App.config
+++ b/Vault2GitCLI/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Vault.Server" value="vaultserver.mycompany.com"/>
+    <add key="Vault.UseSSL" value="true"/>
     <add key="Vault.User" value="vaultuser"/>
     <add key="Vault.Password" value="vaultpassword"/>
     <add key="Vault.Repo" value="nameofTheVaultRepo"/>
